# Picture-Aliver-New

./: .gitignore  PicAliver.spec  Picture-Aliver.spec  README.md  RUN_INSTRUCTIONS.md  app_output.txt  main.py  pyproject.toml  requirements.txt  run_frosting.bat  run_frosting.ps1  setup.py  simple_generator.py  start_app.py
configs/: training_config.yaml
desktop/electron/: package-lock.json  package.json
desktop/electron/release/: builder-debug.yml
desktop/pyqt/: build.spec  main.py
mobile_app/: .npmrc  App.tsx  README.md  app.json  eas.json  index.js  package.json
mobile_app/app/: index.tsx
mobile_app/assets/: adaptive-icon.png.txt  favicon.png.txt  icon.png.txt  splash.png.txt
mobile_app/lib/models/: types.ts
mobile_app/lib/screens/: HomeScreen.tsx  SettingsScreen.tsx
mobile_app/lib/services/: api.ts
src/: __init__.py  api_extension.py
src/core/: __init__.py  config_extension.py  debug.py  lynx_pipeline.py  model_loader.py  model_manager.py  model_registry.py  pipeline.py  polaris_pipeline.py
src/modules/generation/: __init__.py  artifact_reducer.py  artifact_reduction.py  content_analyzer.py  controlnet_guidance.py  depth_conditioning.py  (+5 more)
src/picture_aliver/: __init__.py  app.py  cli.py  config.yaml  config_loader.py  depth_estimator.py  desktop.py  experiences.py  exporter.py  gpu_optimization.py  image_loader.py  main.py  mobile_docs.py  model_manager.py  models.py  motion_generator.py  motion_prompt.py  quality_control.py  segmentation.py  stabilizer.py  text_to_image.py  video_generator.py
tests/: README.md  testing_workflow.py
(+10 files in other folders)
